tests/cases/errors/unsupported_tagged_union/main.sv
module Top;
  union tagged { int a; int b; } u;
endmodule
